--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,10 @@ subprojects {
     eclipse.project {
   	    natures 'org.eclipse.buildship.core.gradleprojectnature'
     }
+    
+    dependencies {
+	    testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
+	    testCompile group: 'junit', name: 'junit-dep', version: '4.10'
+	    testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
+    }
 }
