--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,14 @@ subprojects {
     }
 
     eclipse.project {
-  	    natures 'org.eclipse.buildship.core.gradleprojectnature'
+          natures 'org.eclipse.buildship.core.gradleprojectnature'
     }
     
     dependencies {
-	    testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
-	    testCompile group: 'junit', name: 'junit-dep', version: '4.10'
-	    testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
+        testCompile group: 'org.hamcrest',                   name: 'hamcrest-core',    version: '1.3'
+        testCompile group: 'junit',                          name: 'junit-dep',        version: '4.10'
+        testCompile group: 'org.hamcrest',                   name: 'hamcrest-library', version: '1.3'
+        testCompile group: 'org.mockito',                    name: 'mockito-core',     version: '2.+'
+        testCompile group: 'com.googlecode.catch-exception', name: 'catch-exception',  version: '1.2.0'
     }
 }
